# standards-sdk

./: .env.example  .gitignore  .prettierignore  .swcrc  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  eslint.config.js  jest-environment-hedera.js  jest.config.cjs  jest.config.json  jest.setup.js  jsr.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
.github/: FUNDING.yml  release.yml
__mocks__/: file-type.js  inscription-sdk.js
__tests__/: browser-entry.test.ts  browser-root-entry.test.ts  connections-manager-sequence-numbers.test.ts  connections-manager.test.ts  hcs-10-sdk-create.test.ts  hcs-14.test.ts  hcs-16-base-client.test.ts  hcs-16-integration.test.ts  hcs-16-memo.test.ts  hcs-16-sdk.test.ts  hcs-16-specification.test.ts  hcs-16-tx.test.ts  hcs-16.test.ts  hcs-17-browser.test.ts  hcs-17-client.test.ts  hcs-17-specification.test.ts  hcs-17.test.ts  hcs-18-base-client.test.ts  hcs-18-browser.test.ts  hcs-18-client.test.ts  hcs-18-tx.test.ts  hcs-18-types.test.ts  hcs-18.test.ts  hcs-2.integration.test.ts  hcs-2.schema.test.ts  hcs-20.integration.test.ts  hcs-21-specification.test.ts  hcs-21-verify.test.ts  hcs-21.test.ts  hcs-22-specification.test.ts  hcs-22.test.ts  hcs-23-specification.test.ts  hcs-23.test.ts  hcs-6.base-client.test.ts  hcs-6.browser.test.ts  hcs-6.client.test.ts  hcs-6.integration.test.ts  hcs-6.schema.test.ts  hcs11-client.test.ts  hrl-resolver-resolve.test.ts  (+7 more)
ci/: calc-canary-version.mjs
coverage/: lcov.info  (+2 more)
demo/hcs-12/rust-wasm/: Cargo.toml  build.sh
demo/hcs-12/rust-wasm/src/: lib.rs
(+861 files in other folders)
